18-bookorbit/bookorbit-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookorbit
  namespace: bookorbit
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: default
      sectionName: websecure
  hostnames:
    - bookorbit.k8s.noelmiller.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bookorbit
          port: 3000
          weight: 1
